      map to String, but are bound and mapped with different JDBC APIs.
    - Support for NVARCHAR columns, using the @NVarchar qualifying annotation
    - Support for Postgres MACADDR columns, using the @MacAddr qualifying annotation
    - Support for HSTORE columns, using the @HStore annotation
    - @Json type qualifier with Jackson 2 and Gson 2 bindings
  - Oracle DB support changes
    - Due to ongoing stability problems with Oracle's Maven servers, we have split the
      jdbi3-oracle12 artifact out of the main project, to a new home at
      https://github.com/jdbi/jdbi3-oracle12. This means that jdbi3-oracle12 versions will no
      longer stay in sync with the rest of Jdbi. Accordingly, we have removed jdbi3-oracle12
      from the BOM.

3.5.2
  - Bug Fixes
    - bindList throws an NPE if called with an immutable list,
      method is safe according to the specification
  - Improvements
    - improve binding private implementations of interfaces
    - improved loggability (through SqlLogger) of JDBI's built-in Argument instances

3.5.1 (whoops, 3.5.0 was released from the wrong commit!)
  - New API
    - SqlStatements.allowUnusedBindings allows you to bind Arguments to query parts that may be
      left out of the final query (e.g. by a TemplateEngine that renders conditional blocks)
      without getting an Exception.
    - Added the MapMappers JdbiConfig class to configure column name case changes, preferred over
      the old boolean toggle.
    - ColumnNameMatcher.columnNameStartsWith() method, used by reflection mappers to short-circuit
      nested mappings when no columns start with the nested prefix.
    - bindMethodsList and @BindMethodsList create VALUES(...) tuples by calling named methods
  - Improvements
    - SqlObject no longer transforms non-Runtime exceptions (slightly breaking change)
    - Use MethodHandles over Reflection to additionally do less exception wrapping / transformation
    - Skip unused string formatting for performance